# gsrs.services.ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: development.md  usage.md
gsrs/services/ai/: __init__.py  chunk_metadata.py  chunk_models.py  chunk_normalize.py  chunk_notes.py  chunk_ranking.py  chunk_references.py  substance_chunker.py
gsrs/services/ai/builders/: __init__.py  chemical.py  common.py  concept.py  mixture.py  nucleic_acid.py  polymer.py  protein.py  specified_substance_g1.py  structurally_diverse.py
tests/: _bootstrap.py  test_embedding_chunks.py  test_imports.py
