[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gsrs-services-ai"
version = "0.1.0"
description = "AI-oriented GSRS service utilities, including embedding chunk generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Egor Puzanov", email = "epuzanov@users.noreply.github.com" },
]
keywords = ["gsrs", "ai", "embeddings", "chunking", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2,<3",
    "gsrs-model>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["gsrs*"]
namespaces = true